syntax = "proto2";

package wireless_android_play_analytics;

import "fetcher/proto/enums.proto";

// Proto that shows the SourceType availability for a hologram_client.
//
// Sample:
//
//   hologram_client: CHIPPER_BATCH
//   source_type: PLAY_COUNTRY
//   availability_status {
//     date: "2020-06-20"
//     source_ingestion_status: INGESTED_SUCCESSFULLY
//   }
//   availability_status {
//     date: "2020-06-21"
//     source_ingestion_status: NOT_INGESTED
//     update_timestamp_millis: 1234567890
//   }
//
// Next tag: 4
message HologramDataAvailability {
  // Next tag: 3
  enum HologramClient {
    UNKNOWN_CLIENT = 0;

    CHIPPER_BATCH = 1;

    CHIPPER_GDPR = 2;
  }

  optional HologramClient hologram_client = 1;

  optional SourceType source_type = 2;

  // Next tag: 3
  enum IngestionStatus {
    UNKNOWN_STATUS = 0;

    INGESTED = 1;

    NOT_INGESTED = 2;
  }

  // Next tag: 3
  message AvailabilityStatus {
    optional string date = 1;

    optional IngestionStatus source_ingestion_status = 2;
  }

  repeated AvailabilityStatus availability_status = 3;
}